<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context=".SettingsActivity$SettingServerFragment">

    <TextView
        android:id="@+id/settings_id_tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/settings_id_tv_server_ip_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings_text_tv_server_ip_address" />

    <EditText
        android:id="@+id/settings_id_et_server_ip_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/settings_id_tv_server_ip_address"
        android:layout_alignParentLeft="true"
        android:hint="@string/settings_hint_et_server_ip_address" />

    <TextView
        android:id="@+id/settings_id_tv_server_port"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/settings_id_et_server_ip_address"
        android:text="@string/settings_text_tv_server_port" />

    <com.pretolesi.arduino.PretolesiEditText
        android:id="@+id/settings_id_et_server_port"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/settings_id_tv_server_port"
        android:layout_alignParentLeft="true"
        android:hint="@string/settings_hint_et_server_port"
        android:inputType="numberSigned" />

    <TextView
        android:id="@+id/settings_id_tv_timeout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/settings_id_et_server_port"
        android:text="@string/settings_text_tv_timeout" />

    <com.pretolesi.arduino.PretolesiEditText
        android:id="@+id/settings_id_et_timeout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/settings_id_tv_timeout"
        android:layout_alignParentLeft="true"
        android:hint="@string/settings_hint_et_timeout"
        android:inputType="numberSigned" />

    <TextView
        android:id="@+id/settings_id_tv_comm_frame_delay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/settings_id_et_timeout"
        android:text="@string/settings_text_tv_comm_frame_delay" />

    <com.pretolesi.arduino.PretolesiEditText
        android:id="@+id/settings_id_et_comm_frame_delay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/settings_id_tv_comm_frame_delay"
        android:layout_alignParentLeft="true"
        android:hint="@string/settings_hint_et_comm_frame_delay"
        android:inputType="numberSigned" />

    <Button
        android:id="@+id/settings_id_btn_save_server"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:text="@string/settings_text_btn_save_server" />

</RelativeLayout>