<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context=".MainActivity$SettingsFragment">

    <TextView
        android:id="@+id/settings_id_tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/settings_id_tv_server_ip_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings_text_tv_server_ip_address" />

    <EditText
        android:id="@+id/settings_id_et_server_ip_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/settings_id_tv_server_ip_address"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="34dp"
        android:hint="@string/settings_hint_et_server_ip_address" />

    <Button
        android:id="@+id/settings_id_btn_start_comm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/settings_id_et_server_ip_address"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="34dp"
        android:text="@string/settings_text_btn_start_comm" />

    <Button
        android:id="@+id/settings_id_btn_stop_comm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/settings_id_et_server_ip_address"
        android:layout_alignParentRight="true"
        android:layout_marginTop="34dp"
        android:text="@string/settings_text_btn_stop_comm" />

    <Button
        android:id="@+id/settings_id_btn_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/settings_id_btn_start_comm"
        android:layout_alignParentRight="true"
        android:layout_marginTop="34dp"
        android:text="@string/settings_text_btn_save" />
</RelativeLayout>