<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:background="0xFF"
                tools:context=".MainActivity$DriveFragment">

    <TextView
        android:id="@+id/drive_id_tv_value_up"
        android:text="@string/default_string_value_char"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/id_tv_byte_1a2_1_out"
        android:text="@string/default_string_value_bit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/drive_id_tv_value_up"
        android:layout_alignParentStart="true"/>

    <TextView
        android:id="@+id/id_tv_byte_1a2_1_in"
        android:text="@string/default_string_value_bit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/drive_id_tv_value_up"
        android:layout_alignParentEnd="true"/>

    <TextView
        android:id="@+id/id_tv_byte_5a9_out"
        android:text="@string/default_string_value_array"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/id_tv_byte_1a2_1_out"
        android:layout_alignParentStart="true"/>

    <TextView
        android:id="@+id/id_tv_byte_5a9_in"
        android:text="@string/default_string_value_array"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/id_tv_byte_1a2_1_in"
        android:layout_alignParentEnd="true"/>

    <Button
        android:id="@+id/drive_id_btn_drive_wheel_start_stop"
        android:text="@string/drive_text_btn_drive_wheel_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/id_tv_byte_5a9_in"
        android:layout_marginTop="5dp"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/drive_id_tv_value_left"
        android:text="@string/default_string_value_char"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/drive_id_btn_drive_wheel_start_stop"
        android:layout_marginTop="5dp"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/id_tv_byte_1a2_3_out"
        android:text="@string/default_string_value_bit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/drive_id_tv_value_left"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"/>

    <TextView
        android:id="@+id/id_tv_byte_1a2_3_in"
        android:text="@string/default_string_value_bit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/id_tv_byte_1a2_3_out"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"/>

    <TextView
        android:id="@+id/id_tv_byte_7a11_out"
        android:text="@string/default_string_value_array"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/id_tv_byte_1a2_3_in"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"/>

    <TextView
        android:id="@+id/id_tv_byte_7a11_in"
        android:text="@string/default_string_value_array"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/id_tv_byte_7a11_out"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"/>

    <TextView
        android:id="@+id/drive_id_tv_value_right"
        android:text="@string/default_string_value_char"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/drive_id_btn_drive_wheel_start_stop"
        android:layout_marginTop="5dp"
        android:layout_alignParentEnd="true" />

    <TextView
        android:id="@+id/id_tv_byte_1a2_4_out"
        android:text="@string/default_string_value_bit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/drive_id_tv_value_right"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"/>

    <TextView
        android:id="@+id/id_tv_byte_1a2_4_in"
        android:text="@string/default_string_value_bit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/id_tv_byte_1a2_4_out"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"/>

    <TextView
        android:id="@+id/id_tv_byte_8a12_out"
        android:text="@string/default_string_value_array"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/id_tv_byte_1a2_4_in"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"/>

    <TextView
        android:id="@+id/id_tv_byte_8a12_in"
        android:text="@string/default_string_value_array"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/id_tv_byte_8a12_out"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"/>

    <Button
        android:id="@+id/drive_id_btn_drive_wheel_fork_start_stop"
        android:text="@string/drive_text_btn_drive_fork_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/id_tv_byte_7a11_in"
        android:layout_marginTop="5dp"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/id_tv_byte_1a2_2_out"
        android:text="@string/default_string_value_bit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/drive_id_btn_drive_wheel_fork_start_stop"
        android:layout_marginTop="5dp"
        android:layout_alignParentStart="true"/>

    <TextView
        android:id="@+id/id_tv_byte_1a2_2_in"
        android:text="@string/default_string_value_bit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/drive_id_btn_drive_wheel_fork_start_stop"
        android:layout_alignParentEnd="true"/>

    <TextView
        android:id="@+id/id_tv_byte_6a10_out"
        android:text="@string/default_string_value_array"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/id_tv_byte_1a2_2_out"
        android:layout_alignParentStart="true"/>

    <TextView
        android:id="@+id/id_tv_byte_6a10_in"
        android:text="@string/default_string_value_array"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/id_tv_byte_1a2_2_in"
        android:layout_alignParentEnd="true"/>

    <TextView
        android:id="@+id/drive_id_tv_value_down"
        android:text="@string/default_string_value_char"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/id_tv_byte_6a10_in"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/drive_id_tv_communication_status"
        android:text="@string/default_string_value_char"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"/>
</RelativeLayout>